migrate to java 9